Fix selfie not showing bug in 100% page width

--- a/quartz/components/styles/hero.scss
+++ b/quartz/components/styles/hero.scss
@@ -6,7 +6,7 @@
     padding: 2px;
     // margin-top: 5rem;
     margin: 10px;
-    @media screen and (max-width: 1510px) {
+    @media screen and (max-width: 1400px) {
         display: none;
     }
 }
